# anki-deck-librarian

./: .gitignore  Pipfile  README.md  pyproject.toml
anki_deck_librarian/: cli.py  loader.py  schemas.py
builds/: Country Capitals.apkg
decks/deck_one/: deck.yaml  south_america.yaml
script/: publish
