# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-deck-librarian"
version = "0.1.2"
description = "A library/CLI for generating anki decks from YAML"
readme = "README.md"
authors = [{ name = "Raymond Berg", email = "dev@raymondberg.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["anki", "deck", "cards", "flashcards", "yaml"]
dependencies = [
    "genanki",
    "pydantic",
    "ruamel.yaml",
    "typer",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "isort"]

[project.urls]
Homepage = "https://github.com/raymondberg/anki-deck-librarian"

[project.scripts]
anki-deck-librarian = "anki_deck_librarian.cli:app"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["anki_deck_librarian*"]  # ["*"] by default
